--- a/features.html
+++ b/features.html
@@ -5,16 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BOSCO</title>
+    <title>BOSCO Features</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/main_page.css" />
+    <link rel="stylesheet" href="css/features.css" />
     <link rel="stylesheet" href="css/footer.css" />
 </head>
 
 <body>
-
-    <header class="header_main">
+    <header class="header">
         <div class="container_nav">
             <div class="container_name">
                 <a href="index.html" class="name">BOSCO</a>
@@ -26,83 +25,55 @@
                 <a href="contacts.html" class="nav_items">Contacts</a>
             </div>
         </div>
-        <div class="container_welcome">
-            <p class="welcome">Welcome</p>
-            <h1 class="heading_name">BOSCO</h1>
-            <p class="ready">Ready to open</p>
+
+        <div class="container_heading">
+            <h1 class="heading_style">Why are we the most popular<br>restaurant in the city?</h1>
+            <p class="description_style">The best European food from famous chefs is here. Combined with a unique
+                location and<br>
+                welcoming s ervice, this creates an unforgettable atmosphere. National flavor is present in<br>
+                everything: interior, staff, cuisine, music.</p>
+        </div>
+
+        <div class="container_title">
+            <h1 class="heading_style">Our main features</h1>
+        </div>
+
+        <div class="wrapper_features">
+            <div>
+                <img src="images/features1.png" alt="Gourmet food" class="img_transform">
+                <p class="caption">Gourmet food</p>
+            </div>
+            <div>
+                <img src="images/features2.png" alt="Fast food service" class="img_transform">
+                <p class="caption">Fast food service</p>
+            </div>
+            <div>
+                <img src="images/features3.png" alt="Luxurious design" class="img_transform">
+                <p class="caption">Luxurious design</p>
+            </div>
+        </div>
+
+        <div class="wrapper_features wrapper_indent">
+            <div>
+                <img src="images/features4.png" alt="Friendly staff" class="img_transform">
+                <p class="caption caption_indent">Friendly staff</p>
+            </div>
+            <div>
+                <img src="images/features5.png" alt="Convenient location" class="img_transform">
+                <p class="caption caption_indent">Convenient location</p>
+            </div>
+            <div>
+                <img src="images/features6.png" alt="The best visitors" class="img_transform">
+                <p class="caption caption_indent">The best visitors</p>
+            </div>
+        </div>
+
+        <div class="container_title">
+            <h1 class="heading_style">We will be happy to serve you any day of the week<br>
+                from 09:00 to 22:00
+            </h1>
         </div>
     </header>
-
-    <main>
-        <section class="container_story">
-            <div class="wrapper_story">
-                <h2 class="disc">Discover</h2>
-                <p class="name_article">our story</p>
-                <p class="desc">
-                    Bosco is a restaurant, bar and coffee roastery located on a busy corner site<br>
-                    in Farrington’s Market. With glased frontage on two sides of the building?<br>
-                    overlooking the market and abustiling city intersection.
-                </p>
-                <a href="features.html" class="view">About our story</a>
-                <span class="link_underline"></span>
-            </div>
-            <div class="fish_img">
-                <img src="images/fish.png" alt="fish" class="fish" />
-            </div>
-        </section>
-
-        <section class="container_recipes_cook">
-            <div class="wrapper_heading">
-                <h1>Tasteful</h1>
-                <p>recipes</p>
-            </div>
-        </section>
-
-        <section class="container_menu">
-            <div class="menu_imgs">
-                <img src="/images/hamburger.png" alt="hamburger" class="food_items" />
-                <img src="/images/pasta.png" alt="pasta" class="food_items" />
-                <img src="/images/meat.png" alt="meat" class="food_items" />
-                <img src="/images/steak.png" alt="steak" class="food_items" />
-            </div>
-            <div class="wrapper_menu">
-                <h2 class="disc">Discover</h2>
-                <p class="name_article">menu</p>
-                <p class="desc">
-                    For those with pure food indulgense in mind, come next door and sate<br>
-                    your desires with our ever changing internationally and seasonally<br>
-                    inspired small plates. We love food, lots of different food, just like you.
-                </p>
-                <a href="menu.html" class="view">View the full menu</a>
-                <span class="link_underline"></span>
-            </div>
-        </section>
-
-        <section class="container_cook container_recipes_cook">
-            <div class="wrapper_heading">
-                <h1>What to cook</h1>
-                <p>today?</p>
-            </div>
-        </section>
-
-        <section class="container_reservation">
-            <div class="reservation">
-                <h2 class="disc">Culinary</h2>
-                <p class="name_article">delight</p>
-                <p class="desc">
-                    We promise in intimate and relax dining experience that offers something<br>
-                    different to local and foreign patrons and ensures you enjoy a memorible<br>
-                    food experience every time.
-                </p>
-                <a href="reservation.html" class="view">Make a reservation</a>
-                <span class="link_underline"></span>
-            </div>
-            <div class="reservation_img">
-                <img src="/images/cancer.png" alt="cancer" class="res_img" />
-                <img src="/images/wine.png" alt="wine" class="res_img" />
-            </div>
-        </section>
-    </main>
 
     <footer class="footer">
         <div class="container_name">
