--- a/contacts.html
+++ b/contacts.html
@@ -5,16 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BOSCO</title>
+    <title>BOSCO contacts</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/main_page.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/contacts.css">
 </head>
 
 <body>
-
-    <header class="header_main">
+    <header class="header">
         <div class="container_nav">
             <div class="container_name">
                 <a href="index.html" class="name">BOSCO</a>
@@ -26,83 +25,27 @@
                 <a href="contacts.html" class="nav_items">Contacts</a>
             </div>
         </div>
-        <div class="container_welcome">
-            <p class="welcome">Welcome</p>
-            <h1 class="heading_name">BOSCO</h1>
-            <p class="ready">Ready to open</p>
+        <div class="container_contacts">
+            <h1 class="heading_contacts">Contact us for all questions of interest:</h1>
+            <div class="wrapper_contacts">
+                <ul class="contacts_tel">
+                    <li>+(375) 11 123 45 67</li>
+                    <li>+(375) 11 123 45 78</li>
+                    <li>+(375) 11 123 45 89</li>
+                    <li>+(375) 11 123 45 90</li>
+                    <li>+(375) 22 123 45 67</li>
+                </ul>
+                <ul class="contacts_name">
+                    <li>Anastasia (director)</li>
+                    <li>Eva (art-director)</li>
+                    <li>Jake (recruiting specialist)</li>
+                    <li>Michael (specialist in working with customers)</li>
+                    <li>Our call-center</li>
+                </ul>
+            </div>
+        </div>
         </div>
     </header>
-
-    <main>
-        <section class="container_story">
-            <div class="wrapper_story">
-                <h2 class="disc">Discover</h2>
-                <p class="name_article">our story</p>
-                <p class="desc">
-                    Bosco is a restaurant, bar and coffee roastery located on a busy corner site<br>
-                    in Farrington’s Market. With glased frontage on two sides of the building?<br>
-                    overlooking the market and abustiling city intersection.
-                </p>
-                <a href="features.html" class="view">About our story</a>
-                <span class="link_underline"></span>
-            </div>
-            <div class="fish_img">
-                <img src="images/fish.png" alt="fish" class="fish" />
-            </div>
-        </section>
-
-        <section class="container_recipes_cook">
-            <div class="wrapper_heading">
-                <h1>Tasteful</h1>
-                <p>recipes</p>
-            </div>
-        </section>
-
-        <section class="container_menu">
-            <div class="menu_imgs">
-                <img src="/images/hamburger.png" alt="hamburger" class="food_items" />
-                <img src="/images/pasta.png" alt="pasta" class="food_items" />
-                <img src="/images/meat.png" alt="meat" class="food_items" />
-                <img src="/images/steak.png" alt="steak" class="food_items" />
-            </div>
-            <div class="wrapper_menu">
-                <h2 class="disc">Discover</h2>
-                <p class="name_article">menu</p>
-                <p class="desc">
-                    For those with pure food indulgense in mind, come next door and sate<br>
-                    your desires with our ever changing internationally and seasonally<br>
-                    inspired small plates. We love food, lots of different food, just like you.
-                </p>
-                <a href="menu.html" class="view">View the full menu</a>
-                <span class="link_underline"></span>
-            </div>
-        </section>
-
-        <section class="container_cook container_recipes_cook">
-            <div class="wrapper_heading">
-                <h1>What to cook</h1>
-                <p>today?</p>
-            </div>
-        </section>
-
-        <section class="container_reservation">
-            <div class="reservation">
-                <h2 class="disc">Culinary</h2>
-                <p class="name_article">delight</p>
-                <p class="desc">
-                    We promise in intimate and relax dining experience that offers something<br>
-                    different to local and foreign patrons and ensures you enjoy a memorible<br>
-                    food experience every time.
-                </p>
-                <a href="reservation.html" class="view">Make a reservation</a>
-                <span class="link_underline"></span>
-            </div>
-            <div class="reservation_img">
-                <img src="/images/cancer.png" alt="cancer" class="res_img" />
-                <img src="/images/wine.png" alt="wine" class="res_img" />
-            </div>
-        </section>
-    </main>
 
     <footer class="footer">
         <div class="container_name">
