--- a/contacts.html
+++ b/contacts.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BOSCO contacts</title>
-    <link rel="shortcut icon" type="image/png" href="icons/bosco.png"/>
+    <link rel="shortcut icon" type="image/png" href="icons/bosco.png" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/footer.css" />
@@ -23,7 +23,7 @@
             <div class="wrapper_nav">
                 <input id="nav_toggle" type="checkbox" />
                 <label class="nav_button" for="nav_toggle">
-                <span></span>
+                    <span></span>
                 </label>
                 <ul class="nav">
                     <li><a href="menu.html" class="nav_items">Menu</a></li>
@@ -37,11 +37,15 @@
             <h1 class="heading_contacts">Contact us for all questions of interest:</h1>
             <div class="wrapper_contacts">
                 <ul class="contacts_tel">
-                    <li><span class="number">+(375) 11 123 45 67</span><span class="contact">Anastasia (director)</span></li>
-                    <li><span class="number">+(375) 11 123 45 78</span><span class="contact">Eva (art-director</span)</li>
-                    <li><span class="number">+(375) 11 123 45 89</span><span class="contact">Jake (recruiting specialist</span</li>
-                    <li><span class="number">+(375) 11 123 45 90</span><span class="contact">Michael (specialist in working with customers)</span</li>
-                    <li><span class="number">+(375) 22 123 45 67</span><span class="contact">Our call-center</span</li>
+                    <li><span class="number">+(375) 11 123 45 67</span><span class="contact">Anastasia (director)</span>
+                    </li>
+                    <li><span class="number">+(375) 11 123 45 78</span><span class="contact">Eva (art-director</span)<
+                                /li>
+                    <li><span class="number">+(375) 11 123 45 89</span><span class="contact">Jake (recruiting specialist
+                            </span< /li>
+                    <li><span class="number">+(375) 11 123 45 90</span><span class="contact">Michael (specialist in
+                            working with customers)</span< /li>
+                    <li><span class="number">+(375) 22 123 45 67</span><span class="contact">Our call-center</span< /li>
                 </ul>
             </div>
         </div>
