--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/main_page.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/burger.css">
 </head>
 
 <body>
@@ -20,11 +21,17 @@
             <div class="container_name">
                 <a href="index.html" class="name">BOSCO</a>
             </div>
-            <div class="nav">
-                <a href="menu.html" class="nav_items">Menu</a>
-                <a href="reservation.html" class="nav_items">Reservation</a>
-                <a href="features.html" class="nav_items">Features</a>
-                <a href="contacts.html" class="nav_items">Contacts</a>
+            <div class="wrapper_nav">
+                <input id="nav_toggle" type="checkbox" />
+                <label class="nav_button" for="nav_toggle">
+                    <span></span>
+                </label>
+                <ul class="nav">
+                    <li><a href="menu.html" class="nav_items">Menu</a></li>
+                    <li><a href="reservation.html" class="nav_items">Reservation</a></li>
+                    <li><a href="features.html" class="nav_items">Features</a></li>
+                    <li><a href="contacts.html" class="nav_items">Contacts</a></li>
+                </ul>
             </div>
         </div>
         <div class="container_welcome">
@@ -40,8 +47,8 @@
                 <h2 class="disc">Discover</h2>
                 <p class="name_article">our story</p>
                 <p class="desc">
-                    Bosco is a restaurant, bar and coffee roastery located on a busy corner site<br>
-                    in Farrington’s Market. With glased frontage on two sides of the building?<br>
+                    Bosco is a restaurant, bar and coffee roastery located on a busy corner site
+                    in Farrington’s Market. With glased frontage on two sides of the building?
                     overlooking the market and abustiling city intersection.
                 </p>
                 <a href="features.html" class="view">About our story</a>
@@ -70,8 +77,8 @@
                 <h2 class="disc">Discover</h2>
                 <p class="name_article">menu</p>
                 <p class="desc">
-                    For those with pure food indulgense in mind, come next door and sate<br>
-                    your desires with our ever changing internationally and seasonally<br>
+                    For those with pure food indulgense in mind, come next door and sate
+                    your desires with our ever changing internationally and seasonally
                     inspired small plates. We love food, lots of different food, just like you.
                 </p>
                 <a href="menu.html" class="view">View the full menu</a>
@@ -91,8 +98,8 @@
                 <h2 class="disc">Culinary</h2>
                 <p class="name_article">delight</p>
                 <p class="desc">
-                    We promise in intimate and relax dining experience that offers something<br>
-                    different to local and foreign patrons and ensures you enjoy a memorible<br>
+                    We promise in intimate and relax dining experience that offers something
+                    different to local and foreign patrons and ensures you enjoy a memorible
                     food experience every time.
                 </p>
                 <a href="reservation.html" class="view">Make a reservation</a>
@@ -116,6 +123,7 @@
             <a href="features.html" class="nav_items">Features</a>
             <a href="contacts.html" class="nav_items">Contacts</a>
         </div>
+        <span class="footer_border"></span>
         <div class="container_icons">
             <div class="footer_caption">
                 <a href="index.html">Bosco restaurant 2021</a>
