--- a/features.html
+++ b/features.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/features.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/burger.css">
 </head>
 
 <body>
@@ -19,11 +20,17 @@
             <div class="container_name">
                 <a href="index.html" class="name">BOSCO</a>
             </div>
-            <div class="nav">
-                <a href="menu.html" class="nav_items">Menu</a>
-                <a href="reservation.html" class="nav_items">Reservation</a>
-                <a href="features.html" class="nav_items">Features</a>
-                <a href="contacts.html" class="nav_items">Contacts</a>
+            <div class="wrapper_nav">
+                <input id="nav_toggle" type="checkbox" />
+                <label class="nav_button" for="nav_toggle">
+                    <span></span>
+                </label>
+                <ul class="nav">
+                    <li><a href="menu.html" class="nav_items">Menu</a></li>
+                    <li><a href="reservation.html" class="nav_items">Reservation</a></li>
+                    <li><a href="features.html" class="nav_items">Features</a></li>
+                    <li><a href="contacts.html" class="nav_items">Contacts</a></li>
+                </ul>
             </div>
         </div>
 
@@ -70,7 +77,7 @@
         </div>
 
         <div class="container_title">
-            <h1 class="heading_style">We will be happy to serve you any day of the week<br>
+            <h1 class="heading_bottom">We will be happy to serve you any day of the week<br>
                 from 09:00 to 22:00
             </h1>
         </div>
@@ -87,6 +94,7 @@
             <a href="features.html" class="nav_items">Features</a>
             <a href="contacts.html" class="nav_items">Contacts</a>
         </div>
+        <span class="footer_border"></span>
         <div class="container_icons">
             <div class="footer_caption">
                 <a href="index.html">Bosco restaurant 2021</a>
