--- a/reservation.html
+++ b/reservation.html
@@ -9,9 +9,10 @@
     <link rel="shortcut icon" type="image/png" href="icons/bosco.png"/>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/main_page.css" />
     <link rel="stylesheet" href="css/reservation.css" />
     <link rel="stylesheet" href="css/footer.css" />
-    <link rel="stylesheet" href="css/main_page.css" />
+    <link rel="stylesheet" href="css/burger.css">
 </head>
 
 <body>
@@ -20,14 +21,20 @@
             <div class="container_name">
                 <a href="index.html" class="name">BOSCO</a>
             </div>
-            <div class="nav">
-                <a href="menu.html" class="nav_items">Menu</a>
-                <a href="reservation.html" class="nav_items">Reservation</a>
-                <a href="features.html" class="nav_items">Features</a>
-                <a href="contacts.html" class="nav_items">Contacts</a>
+            <div class="wrapper_nav">
+                <input id="nav_toggle" type="checkbox" />
+                <label class="nav_button" for="nav_toggle">
+                <span></span>
+                </label>
+                <ul class="nav">
+                    <li><a href="menu.html" class="nav_items">Menu</a></li>
+                    <li><a href="reservation.html" class="nav_items">Reservation</a></li>
+                    <li><a href="features.html" class="nav_items">Features</a></li>
+                    <li><a href="contacts.html" class="nav_items">Contacts</a></li>
+                </ul>
             </div>
         </div>
-        <div class="container_welcome">
+        <div class="wrapper_welcome">
             <h1 class="welcome">Welcome</h1>
             <h1 class="welcome_heading">BOSCO reservation</h1>
             <span class="line_reservation"></span>
@@ -38,11 +45,11 @@
         <section class="container_gallery">
             <h2 class="gallery_heading">Gallery</h2>
             <div class="wrapper_gallery">
-                <img src="images/restaurant_1.png" alt="inside" />
-                <img src="images/restaurant_2.png" alt="inside" />
-                <img src="images/restaurant_3.png" alt="inside" />
-                <img src="images/restaurant_4.png" alt="inside" />
-                <img src="images/restaurant_5.png" alt="inside" />
+                <img src="images/restaurant_1.png" alt="inside" class="gallery_img" />
+                <img src="images/restaurant_2.png" alt="inside" class="gallery_img" />
+                <img src="images/restaurant_3.png" alt="inside" class="gallery_img" />
+                <img src="images/restaurant_4.png" alt="inside" class="gallery_img" />
+                <img src="images/restaurant_5.png" alt="inside" class="gallery_img" />
             </div>
             <div class="gallery_text">
                 <p>
@@ -87,7 +94,7 @@
                         </div>
                     </div>
                     <div class="button">
-                        <input type="submit" value="Book now">
+                        <input type="submit" value="Book now" id="button_book">
                     </div>
                 </form>
             </div>
@@ -105,6 +112,7 @@
             <a href="features.html" class="nav_items">Features</a>
             <a href="contacts.html" class="nav_items">Contacts</a>
         </div>
+        <span class="footer_border"></span>
         <div class="container_icons">
             <div class="footer_caption">
                 <a href="index.html">Bosco restaurant 2021</a>
