--- a/features.html
+++ b/features.html
@@ -76,7 +76,7 @@
         </div>
 
         <div class="container_title">
-            <h1 class="heading_bottom">We will be happy to serve you any day of the week
+            <h1 class="heading_bottom">We will be happy to serve you everyday of the week
                 from 09:00 to 22:00
             </h1>
         </div>
