--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
                     in Farrington’s Market. With glased frontage on two sides of the building?
                     overlooking the market and abustiling city intersection.
                 </p>
-                <a href="features.html" class="view">About our story</a>
-                <span class="link_underline"></span>
+                <div class="link_underline"><a href="features.html" class="view">About our story</a></div>
             </div>
             <div class="fish_img">
                 <img src="images/fish.png" alt="fish" class="fish" />
@@ -81,8 +80,7 @@
                     your desires with our ever changing internationally and seasonally
                     inspired small plates. We love food, lots of different food, just like you.
                 </p>
-                <a href="menu.html" class="view">View the full menu</a>
-                <span class="link_underline"></span>
+                <div class="link_underline"><a href="menu.html" class="view">View the full menu</a></div>
             </div>
         </section>
 
@@ -102,8 +100,7 @@
                     different to local and foreign patrons and ensures you enjoy a memorible
                     food experience every time.
                 </p>
-                <a href="reservation.html" class="view">Make a reservation</a>
-                <span class="link_underline"></span>
+                <div class="link_underline"><a href="reservation.html" class="view">Make a reservation</a></div>
             </div>
             <div class="reservation_img">
                 <img src="/images/cancer.png" alt="cancer" class="res_img" />
