--- a/menu.html
+++ b/menu.html
@@ -35,7 +35,7 @@
         </div>
         <div class="container_cover">
             <div class="wrapper_cover">
-                <h1 class="heading_menu logo">Menu</h1>
+                <h1 class="heading_menu title_menu">Menu</h1>
                 <p class="text_cover">The menu concept is based on the selection of products that meet our
                     understanding of quality standards. When creating a dish, we
                     combine modern and classical methods, taking into account the
