--- a/contacts.html
+++ b/contacts.html
@@ -37,18 +37,21 @@
             <h1 class="heading_contacts">Contact us for all questions of interest:</h1>
             <div class="wrapper_contacts">
                 <ul class="contacts_tel">
-                    <li><span class="number">+(375) 11 123 45 67</span><span class="contact">Anastasia (director)</span></li>
-                    <li><span class="number">+(375) 11 123 45 78</span><span class="contact">Eva (art-director)</span></li>
-                    <li><span class="number">+(375) 11 123 45 89</span><span class="contact">Jake (recruiting specialist)</span>
+                    <li><span class="number">+(375) 11 123 45 67</span><span class="contact">Anastasia (director)</span>
                     </li>
-                    <li><span class="number">+(375) 11 123 45 90</span><span class="contact">Michael (specialist in
-                            working with customers)</span></li>
+                    <li><span class="number">+(375) 11 123 45 78</span><span class="contact">Eva (art-director)</span>
+                    </li>
+                    <li><span class="number">+(375) 11 123 45 89</span><span class="contact">Jake (recruiting
+                            specialist)</span>
+                    </li>
+                    <li><span class="number">+(375) 11 123 45 90</span><span class="contact">Michael (work with
+                            customers)</span></li>
                     <li><span class="number">+(375) 22 123 45 67</span><span class="contact">Our call-center</span></li>
                 </ul>
             </div>
         </div>
         </div>
-        </header>
+    </header>
 
     <footer class="footer">
         <div class="container_name">
