--- a/reservation.html
+++ b/reservation.html
@@ -76,7 +76,7 @@
                         </div>
                         <div class="number_person">
                             <label for="number">Number of persons:</label>
-                            <input type="number" id="number" name="number_person" placeholder="1 - 10" />
+                            <input type="number" id="number" name="number_person" placeholder="1 - 10" maxlength="2"/>
                         </div>
                     </div>
                     <div class="wishes">
@@ -90,7 +90,7 @@
                     <div class="phone_number">
                         <div class="phone_length">
                             <label for="phone">Phone number:</label><br>
-                            <input type="tel" id="phone" name="phone_number" placeholder="+375 (29) 123-45-67" />
+                            <input type="tel" id="phone" name="phone_number" placeholder="+375291234567" maxlength="13"/>
                         </div>
                     </div>
                     <div class="button">
